cmake_minimum_required(VERSION 3.5)
project(Luacurl)
set(SOURCES ./src/main.cpp)
add_library(luacurl SHARED ${SOURCES})
set_target_properties(luacurl PROPERTIES PREFIX "")

message(STATUS "Finding lua...")
find_package(Lua REQUIRED)

if (LUA_FOUND)
        include_directories(${LUA_INCLUDE_DIR})
        target_link_libraries(luacurl ${LUA_LIBRARIES})
else()
        message(FATAL_ERROR "Lua not found!")
endif()

message(STATUS "Finding libcurl...")
find_package(CURL REQUIRED)

if (CURL_FOUND)
        include_directories(${CURL_INCLUDE_DIR})
        target_link_libraries(luacurl ${CURL_LIBRARIES})
else()
        message(FATAL_ERROR "Libcurl not found!")
endif()

if(WIN32)
        set_target_properties(luacurl PROPERTIES SUFFIX ".dll")
        message(STATUS "Buiding Windows")
elseif(APPLE)
        set_target_properties(luacurl PROPERTIES SUFFIX ".dylib")
        message(STATUS "Building for MacOs")
else()
        set_target_properties(luacurl PROPERTIES SUFFIX ".so")
        message(STATUS "Windows or MacOs not detected. Building for Linux")
endif()
